# Za

./: Captcha_Report.md  Dockerfile  README.md  VMachine_Hash_report.md  VirtualMachine_report.md  WORK.md  arg_gen.py  bytecode?.txt  captcha_param_gen.py  config.js  generate_hash.js  init.go  main.go  main.js  package.json  server.js  start.sh
.assets/captcha-gen/core/: CMakeLists.txt
.assets/resources/: feilin087.5a04960823b08b091639f12277086e009b548b458ac029b57336f5de75bc2f96.js
.assets/token-helper/: go.mod  main.go  pipe_windows.go
captcha-farmer/: browser.js
captcha-gen/: CMakeLists.txt  main.cpp
image-gen/: README_IMAGE_GEN.md
reports/: Fielin-report.md  aliyun-captcha-report.md
scripts/: utility-for-debug-captcha.js
src/: decode_strings_result.txt  extracted_strings.txt  full_decoded.txt  injection.js  pool.js  tr.txt  z-ai-api.txt
token-helper/: index.js  main.go  package.json  pipe_unix.go
